@@ -2,6 +2,7 @@ libosso (0.9.14-1) unstable; urgency=low
 
   * Fixed a memory leak in initialisation (bug 16209).
   * Now freeing autosave callback in osso_deinitialize.
+  * Now freeing interface member of _osso_interface_t in osso_deinitialize.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 25 Aug 2005 09:36:44 +0300
 
